Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,9 +153,12 @@ input, select, textarea {
 		}
 
 	h1 {
+		margin-top: 0.1em;
+	}
+
+	h1 {
 		font-size: 2em;
 		line-height: 1.5em;
-		margin-bottom: 0.1em;
 	}
 
 	h2 {
